--- a/users-app/package.json
+++ b/users-app/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vue-users-app",
+  "name": "users-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "format": "npx prettier --write src"
   },
   "dependencies": {
     "core-js": "^3.8.3",
